--- a/ETSMobile/fr.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/fr.lproj/Main_iPhone.storyboard
@@ -872,21 +872,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.45406567239608575" green="0.79852513172073847" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tax-tz-2pd">
-                            <size key="itemSize" width="115" height="66"/>
+                            <size key="itemSize" width="145" height="66"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="10" minY="10" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="20" maxX="10" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SponsorCell" id="JBy-DE-oUC" customClass="ETSCollectionViewCell">
-                                <rect key="frame" x="10" y="74" width="115" height="66"/>
+                                <rect key="frame" x="10" y="84" width="145" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="115" height="66"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="145" height="66"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nxv-Ve-5sR">
-                                            <rect key="frame" x="0.0" y="0.0" width="115" height="66"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="145" height="66"/>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -955,9 +955,12 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Réalisation — Équipe iOS
 Jean-Philippe Martin
-Maxime Mongeau Samuel Bellerose Thomas Durand
+Maxime Mongeau
+Samuel Bellerose
+Thomas Durand
 Maxime Lapointe
-Annie Caron Alyssa Bouchenak
+Annie Caron
+Alyssa Bouchenak
 
 Réalisation — API/Serveur
 Charles Lévesque
@@ -976,9 +979,16 @@ Olivier Lacasse
 Robert Gervais
 Pierre-Luc Bolduc
 
-ÉTSMobile utilise les codes sources ouverts suivants : AMScrollingNavbar Fabric Crashlytics
-MSDynamicsDrawerViewController MSCollectionViewCalendarLayout
-GTMNSString+HTML SDWebImage DZNEmptyDataSet RKDropdownAlert
+ÉTSMobile utilise les codes sources ouverts suivants :
+AMScrollingNavbar
+Fabric
+Crashlytics
+MSDynamicsDrawerViewController
+MSCollectionViewCalendarLayout
+GTMNSString+HTML
+SDWebImage
+DZNEmptyDataSet
+RKDropdownAlert
 
 http://www.clubapplets.ca</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -1558,7 +1568,7 @@ http://www.clubapplets.ca</string>
         <!--Partenaires-->
         <scene sceneID="pZG-rN-EJ1">
             <objects>
-                <navigationController title="Partenaires" definesPresentationContext="YES" id="1UK-Fi-Rsd" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="SponsorsViewController" title="Partenaires" definesPresentationContext="YES" id="1UK-Fi-Rsd" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xKt-ea-qtv">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1966,21 +1976,6 @@ http://www.clubapplets.ca</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vfq-fS-PRh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1400" y="-5153"/>
-        </scene>
-        <!--Partenaires-->
-        <scene sceneID="BsO-Xz-RML">
-            <objects>
-                <navigationController storyboardIdentifier="SponsorsViewController" title="Partenaires" definesPresentationContext="YES" id="rrX-Qb-sxI" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="U0q-Pp-Owe">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GEH-WZ-eqT" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2233" y="-2273"/>
         </scene>
     </scenes>
     <resources>
